# tektome_utils

./: .gitignore  LICENSE  README.md  llms.txt  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: contributing.md  getting-started.md  index.md
docs/api/: attribute-definitions.md  base-schema.md  context.md  datetime.md  index.md  project.md  resource.md
openflow_schema/: __init__.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/attribute-definitions/: index.html
site/api/base-schema/: index.html
site/api/context/: index.html
site/api/datetime/: index.html
site/api/project/: index.html
site/api/resource/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/search/: search_index.json
tektome/: __init__.py
tektome_utils/: __init__.py  schema.py
tests/: __init__.py  conftest.py  test_attribute_definitions.py  test_basic.py  test_context.py  test_project.py  test_projects.py  test_resource.py  test_resources.py
