[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openflow_schema"
version = "0.1.0"
description = "OpenFlow schema via pydantic classes"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tektomejp"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tektomejp/openflow_schema"
Repository = "https://github.com/tektomejp/openflow_schema"

[tool.setuptools]
packages = ["openflow_schema"]
