[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tektome_utils"
version = "0.1.0"
description = "Utilities for handling Tektome Resources."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tektomejp"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tektomejp/tektome_utils"
Repository = "https://github.com/tektomejp/tektome_utils"

[tool.setuptools]
packages = ["tektome_utils"]
