[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tektome"
version = "0.1.0"
description = "Utilities for handling Tektome Resources."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tektomejp"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/tektomejp/tektome_python"
Repository = "https://github.com/tektomejp/tektome_python"

[tool.setuptools]
packages = ["tektome"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
